Alignment fix?

--- a/styles.css
+++ b/styles.css
@@ -72,14 +72,13 @@ h1 {
     .image-text-flex img {
         height: 200px;
         border-radius: 8px;
-        margin-left: auto;
     }
 
     .image-text-flex .text-content {
         color: #d2f2c6;
         padding-bottom: 20px;
         align-self: center;
-        flex-grow: 1;
+        /*flex-grow: 1;*/
         justify-content: center;
     }
 
